# clipper

./: .gitignore  analyzer.py  app.py  compiler.py  config.py  cutter.py  downloader.py  plan.md  pyproject.toml  reframer.py  requirements.txt  scanner.py  subtitle.py  thumbnailer.py  transcriber.py  watermarker.py
.github/workflows/: ci.yml
tests/: test_analyzer.py  test_compiler.py  test_config.py  test_cutter.py  test_scanner.py  test_subtitle.py  test_watermarker.py
